# TIFS-2021

./: .gitignore  CMakeLists.txt  README.md  build.sh  client_main.cc  network.cc  network.h  secret_sharing_efficient_tools.cc  secret_sharing_efficient_tools.h  server_main.cc  timer.cc  timer.h  utils.cc  utils.h
